# cfppfamwr2

./: Dockerfile  README.md  build_image.sh  entrypoint.sh  run_container.sh
src/collision_environment/: CMakeLists.txt  package.xml
src/collision_environment/geometry/: cabinet.bt
src/collision_environment/launch/: load_octomap.launch.py
src/collision_environment/src/: load_local_octomap.cpp
src/pc_point_fetcher/: CMakeLists.txt  package.xml
src/pc_point_fetcher/src/: pc_point_fetcher_node.cpp
src/project_bringup/: CMakeLists.txt  package.xml
src/project_bringup/launch/: ur_control.launch.py
src/project_description/: CMakeLists.txt  package.xml
src/project_description/config/: initial_positions.yaml
src/project_description/launch/: view_ur.launch.py
src/project_description/meshes/k4a_mount/visual/: k4a_mount.dae
src/project_description/rviz/: view_robot.rviz
src/project_description/urdf/: env.urdf.xacro  k4a.urdf.xacro  ur.urdf.xacro
src/project_description/urdf/project_moveit_config/: CMakeLists.txt  package.xml
src/project_description/urdf/project_moveit_config/config/: ur.srdf  ur.urdf.xacro
src/project_description/urdf/project_moveit_config/launch/: demo.launch.py  rsp.launch.py  (+6 more)
src/project_moveit_config/: CMakeLists.txt  package.xml
src/project_moveit_config/launch/: test_moveit.launch.py  ur_moveit_k4a.launch.py  ur_moveit_rtabmap.launch.py  ur_moveit_sim.launch.py
src/project_moveit_config/rviz/: view_robot.rviz
src/project_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
src/target_planner/: CMakeLists.txt  package.xml
src/target_planner/src/: target_planner.cpp  waypoint_planner.cpp
